# process-pdfs

./: .flake8  .gitignore  CLAUDE.md  HYBRID_STRATEGY.md  README.md  TEST_README.md  categories.md  categories.txt  check_models.py  existing_files.txt  extract_categories.py  llm_comparison.txt  llm_comparison_analysis.md  process_scans.py  pyproject.toml  requirements.txt  scan_summary_anthropic.csv  scan_summary_hybrid_test.csv  scan_summary_improved.csv  scan_summary_incoming.csv  scan_summary_llama3.csv  scan_summary_ollama.csv  test_data.json  test_process_scans.py
Claude-DOC/: HYBRID_MODE_SUMMARY.md
src/process_pdfs/: __init__.py  __main__.py  allowed_categories.md  categories.md  category_rules.md  cli.py  prompts.py  quality_validators.py
support/: check_models.py  compare_results.py  extract_categories.py  test_cli_functions.py  test_integration.py  test_process_scans.py  test_prompts.py  test_validators.py
