[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process-pdfs"
version = "0.2.0"
description = "Process scanned PDFs and extract structured information using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nikolai Schlegel", email = "nikolai.schlegel@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.39.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.0.0",
]

[project.scripts]
process-pdfs = "process_pdfs.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/process_pdfs"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "python-lsp-server[all]>=1.13.1",
    "ruff>=0.14.5",
]
